--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -220,6 +220,9 @@
   <data name="MainIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MainIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="mgnoveniya" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mgnoveniya.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Pacman01" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Pacman01.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
